# backend/src/controllers/food/Food.controller.ts
@@ -1,0 +1,7 @@
+import { Controller, Post, Route } from "tsoa";
+
+@Route("food")
+export class FoodController extends Controller {
+  @Post("/")
+  async createFood() {}
+}
