# backend/src/routes/routes.ts
@@ -4,6 +4,10 @@
 import type { TsoaRoute } from '@tsoa/runtime';
 import {  fetchMiddlewares, ExpressTemplateService } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { MediaController } from './../controllers/media/Media.controller';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { FoodController } from './../controllers/food/Food.controller';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { CategoryController } from './../controllers/category/Category.controller';
 import type { Request as ExRequest, Response as ExResponse, RequestHandler, Router } from 'express';
 const multer = require('multer');
@@ -32,11 +36,6 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "FoodSpiciness": {
-        "dataType": "refEnum",
-        "enums": ["MILD","MEDIUM","HOT","EXTRA_HOT"],
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Category": {
         "dataType": "refObject",
         "properties": {
@@ -60,8 +59,9 @@ const models: TsoaRoute.Models = {
             "updatedAt": {"dataType":"datetime","required":true},
             "name": {"dataType":"string","required":true},
             "price": {"dataType":"double","required":true},
-            "type": {"ref":"FoodSpiciness","required":true},
-            "quantity": {"dataType":"double","required":true},
+            "style": {"dataType":"array","array":{"dataType":"string"},"required":true},
+            "hasSpicyNess": {"dataType":"boolean","required":true},
+            "isAvailable": {"dataType":"boolean","required":true},
             "image": {"ref":"Media","required":true},
             "category": {"ref":"Category","required":true},
         },
@@ -86,6 +86,72 @@ export function RegisterRoutes(app: Router,opts?:{multer?:ReturnType<typeof mult
     const upload = opts?.multer ||  multer({"limits":{"fileSize":8388608}});
 
     
+        const argsMediaController_uploadMedia: Record<string, TsoaRoute.ParameterSchema> = {
+                file: {"in":"formData","name":"file","required":true,"dataType":"file"},
+                type: {"in":"formData","name":"type","required":true,"dataType":"string"},
+        };
+        app.post('/media',
+            upload.fields([
+                {
+                    name: "file",
+                    maxCount: 1
+                }
+            ]),
+            ...(fetchMiddlewares<RequestHandler>(MediaController)),
+            ...(fetchMiddlewares<RequestHandler>(MediaController.prototype.uploadMedia)),
+
+            async function MediaController_uploadMedia(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsMediaController_uploadMedia, request, response });
+
+                const controller = new MediaController();
+
+              await templateService.apiHandler({
+                methodName: 'uploadMedia',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsFoodController_createFood: Record<string, TsoaRoute.ParameterSchema> = {
+        };
+        app.post('/food',
+            ...(fetchMiddlewares<RequestHandler>(FoodController)),
+            ...(fetchMiddlewares<RequestHandler>(FoodController.prototype.createFood)),
+
+            async function FoodController_createFood(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsFoodController_createFood, request, response });
+
+                const controller = new FoodController();
+
+              await templateService.apiHandler({
+                methodName: 'createFood',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsCategoryController_getCategory: Record<string, TsoaRoute.ParameterSchema> = {
         };
         app.get('/category',
